package com.example.task4;

public interface Iterator {
    public boolean hasNext(int x);
    public Object next();
    public Object preview();

}
